--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -316,13 +316,14 @@ button {
 .main-header__image {
   display: block;
   margin: 3.2rem auto 3.2rem;
-  max-width: 20rem;
+  max-width: 25rem;
 }
 .main-header__subtitle {
   font-size: 1.6rem;
   font-weight: 600;
   height: 4.6rem;
   text-align: center;
+  min-height: 2rem;
 }
 .main-header__arrow-down {
   margin-top: 2.5rem;
@@ -333,18 +334,27 @@ button {
   transform: translateY(2rem);
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 991px) {
   .main-header {
     margin-top: 10rem;
+    height: calc(100vh - 10rem);
+  }
+  .main-header .button {
+    margin-top: 0;
   }
   .main-header .container {
     max-width: 90rem;
+    height: 100%;
+    padding: 0;
   }
   .main-header__image {
-    max-width: 30rem;
+    margin: 2rem auto;
+    height: 35%;
+    width: auto;
+    max-width: unset;
   }
-  .main-header__arrow-down {
-    margin-bottom: 8rem;
+  .main-header__subtitle {
+    height: 15%;
   }
 }
 .about-me {
